--- a/scripts/configs/ttslearn.yaml
+++ b/scripts/configs/ttslearn.yaml
@@ -65,7 +65,7 @@ model:
     dropout: 0.1
 
   variance_adopter:
-    in_channels: 384
+    in_channels: ${model.channels}
     channels: 256
     dropout: 0.1
 
