--- a/scripts/configs/ttslearn.yaml
+++ b/scripts/configs/ttslearn.yaml
@@ -84,7 +84,7 @@ model:
     num_layers: 16
 
   generator:
-    initial_channel: 80
+    initial_channel: ${model.channels}
     resblock_kernel_sizes: [3, 7, 11]
     resblock_dilation_sizes: [[1,3,5], [1,3,5], [1,3,5]]
     upsample_rates: [8, 8, 2, 2]
